tests/tslib_syntax_off/tslib_syntax_off.exp
Error ------------------------------------------------------------------------------------------------- test.js.flow:2:7

Declaration without `declare` is not enabled. [unsupported-syntax]

   2| const foo: string; // ERROR
            ^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------- test.js.flow:5:1

Declaration without `declare` is not enabled. [unsupported-syntax]

   5| function named(a: string): string; // ERROR
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------- test.js.flow:8:1

Declaration without `declare` is not enabled. [unsupported-syntax]

   8| component Button(props: { label: string }); // ERROR
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:11:10

`import("module")` type syntax is not enabled. [unsupported-syntax]

   11| type T = import("react").Component; // ERROR
                ^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:11:10

Cannot use `Component` as a type because it is an `any`-typed value. Type `Component` properly, so it is no longer
`any`-typed, to use it as an annotation. [value-as-type]

   11| type T = import("react").Component; // ERROR
                ^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:15:25

Return type annotation is required for `declare class` methods. [unsupported-syntax]

   15|   constructor(x: number); // ERROR
                               


Error ------------------------------------------------------------------------------------------------ test.js.flow:19:1

Declaration without `declare` is not enabled. [unsupported-syntax]

       v------------------------------
   19| namespace ImplicitNS { // ERROR
   20|   const x: number;
   21| }
       ^


Error ------------------------------------------------------------------------------------------------ test.js.flow:20:9

Declaration without `declare` is not enabled. [unsupported-syntax]

   20|   const x: number;
               ^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:24:16

`declare export namespace` is not enabled. [unsupported-syntax]

                      v------------------------------
   24| declare export namespace ExportedNS { // ERROR
   25|   declare const y: string;
   26| }
       ^


Error ------------------------------------------------------------------------------------------------ test.js.flow:29:1

`export =` syntax is not enabled. [unsupported-syntax]

   29| export = foo; // ERROR
       ^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------ test.js.flow:32:1

`import ... = ...` syntax is not enabled. [unsupported-syntax]

   32| import A = require("./exports"); // ERROR
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------ test.js.flow:33:1

`import ... = ...` syntax is not enabled. [unsupported-syntax]

   33| import type B = require("./exports"); // ERROR
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------ test.js.flow:34:1

`import ... = ...` syntax is not enabled. [unsupported-syntax]

   34| import C = Foo.Bar; // ERROR
       ^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------ test.js.flow:37:1

Multiple `declare` variable declarators is not enabled. [unsupported-syntax]

   37| declare const x: string, y: number; // ERROR
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:40:19

`declare` variable with literal initializer is not enabled. [unsupported-syntax]

   40| declare const s = 'foo'; // ERROR
                         ^^^^^


Error ------------------------------------------------------------------------------------------------ test.js.flow:44:1

Inline `type` modifier on export specifier is not enabled. [unsupported-syntax]

   44| export {type SomeType}; // ERROR
       ^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:47:12

Template literal type is not enabled. [unsupported-syntax]

   47| type TLT = `foo ${string}`; // ERROR
                  ^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:50:19

`unique symbol` type is not enabled. [unsupported-syntax]

   50| declare const us: unique symbol; // ERROR
                         ^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:53:18

`typeof import("module")` syntax is not enabled. [unsupported-syntax]

   53| type TI = typeof import("foo"); // ERROR
                        ^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:59:30

`implements` with dotted path is not enabled. [unsupported-syntax]

   59| declare class IDP implements ns.IFace {} // ERROR
                                    ^^^^^^^^


Error ------------------------------------------------------------------------------------------------ test.js.flow:63:3

Optional class property (`?:`) is not enabled. [unsupported-syntax]

   63|   x?: number; // ERROR
         ^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:67:14

Optional method signature is not enabled. [unsupported-syntax]

   67| type OSM = { f?(): void }; // ERROR
                    ^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:70:16

Anonymous default export function declaration is not enabled. [unsupported-syntax]

   70| export default function (): void; // ERROR
                      ^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:73:15

Key remapping (`as`) in mapped types is not enabled. [unsupported-syntax]

   73| type MKR<T> = {[K in keyof T as string]: T[K]}; // ERROR
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:76:11

Constructor type expression (`new (...) => T` / `abstract new (...) => T`) is not enabled. [unsupported-syntax]

   76| type CT = new () => string; // ERROR
                 ^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:77:12

Constructor type expression (`new (...) => T` / `abstract new (...) => T`) is not enabled. [unsupported-syntax]

   77| type ACT = abstract new () => string; // ERROR
                  ^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:80:22

Optional unlabeled tuple element is not enabled. [unsupported-syntax]

   80| type OTup = [string, string?]; // ERROR
                            ^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:83:16

Optional indexer (`?:`) is not enabled. [unsupported-syntax]

   83| type OptIdx = {[string]?: number}; // ERROR
                      ^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------ test.js.flow:86:1

`export as namespace` is not enabled. [unsupported-syntax]

   86| export as namespace Foo; // ERROR
       ^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:89:16

`+readonly`/`-readonly` mapped type modifier is not enabled. [unsupported-syntax]

   89| type MR<T> = { -readonly [P in keyof T]: T[P] }; // ERROR
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:90:16

`+readonly`/`-readonly` mapped type modifier is not enabled. [unsupported-syntax]

   90| type PR<T> = { +readonly [P in keyof T]: T[P] }; // ERROR
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------ test.js.flow:94:3

Private class field (`#private`) is not enabled. [unsupported-syntax]

   94|   #private; // ERROR
         ^^^^^^^^


Error ------------------------------------------------------------------------------------------------ test.js.flow:99:1

Type arguments for tagged template expression is not enabled. [unsupported-syntax]

   99| tag<string>`hello`; // ERROR
       ^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- test.js.flow:102:18

`typeof this` syntax is not enabled. [unsupported-syntax]

   102| type TT = typeof this; // ERROR
                         ^^^^


Error ---------------------------------------------------------------------------------------------- test.js.flow:103:19

`typeof this` syntax is not enabled. [unsupported-syntax]

   103| type TTP = typeof this.property; // ERROR
                          ^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:107:3

Property value initializer in declaration is not enabled. [unsupported-syntax]

   107|   readonly x = 42; // ERROR
          ^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:112:3

Property value initializer in declaration is not enabled. [unsupported-syntax]

   112|   private readonly x = 42; // ERROR
          ^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:117:3

Index signatures in classes are not supported. [unsupported-syntax]

   117|   [key: string]: any; // ERROR
          ^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- test.js.flow:123:25

Cannot use `Mixin(...)` [1] as a superclass. Only variables and member expressions may be extended [invalid-extends]

   123| class MixinTest extends Mixin(Base) {} // ERROR
                                ^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- test.js.flow:124:37

Call expression in class `extends` clause is not enabled. [unsupported-syntax]

   124| declare class DeclMixinTest extends Mixin(Base) {} // ERROR
                                            ^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:128:3

`override` modifier on class members is not enabled. [unsupported-syntax]

   128|   override foo() {} // ERROR
          ^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:129:3

`override` modifier on class members is not enabled. [unsupported-syntax]

   129|   override bar: string; // ERROR
          ^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:134:3

`override` modifier on class members is not enabled. [unsupported-syntax]

   134|   override foo(): void; // ERROR
          ^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------- test.js.flow:135:3

`override` modifier on class members is not enabled. [unsupported-syntax]

   135|   override bar: string; // ERROR
          ^^^^^^^^^^^^^^^^^^^^



Found 44 errors
